解决魅族手机兼容显示问题

--- a/src/component/mobile/page_six.less
+++ b/src/component/mobile/page_six.less
@@ -53,7 +53,7 @@
   /*合作伙伴*/
   .page_six_cooperative{
     position: relative;
-    top: -10px;
+    top: 5px;
     left: 0;
 
     .page_six_icon{
@@ -109,32 +109,31 @@
         width: 25%;
         padding-bottom: 6px;
         div{
-          margin-top: -5px;
+          margin-top: -6px;
+        }
+        @media screen and (max-width: 540px){
+          div{
+            margin-top: -7px;
+            font-size: 12px;
+          }
+
         }
 
       img{
-          width:calc(15vw);
-        height:calc(15vw);
+          width: calc(15vw);
+          height: calc(15vw);
 
 
         }
+        @media screen and (max-width: 540px){
+          img{
+            width: calc(14.5vw);
+            height: calc(14.5vw);
+          }
+
+        }
       }
-
-
-
-
-
     }
-
-
-
-
-
-
-
-
-
-
 
   }
 
