--- a/src/component/mobile/page_three.less
+++ b/src/component/mobile/page_three.less
@@ -67,7 +67,7 @@
     transition: transform .5s .9s,opacity .5s .9s;
     .page_three_arrow{
       text-align: center;
-      margin-top: -45px;
+      margin-top: -55px;
       padding-right: 2px;
       img{
         width:calc(87.5vw);
@@ -103,6 +103,7 @@
         color: #ababab;
         width: 70%;
         margin: 0 auto;
+        line-height: 14px;
       }
 
     }
