首页修改文案&移动端图片显示问题

--- a/src/component/basic/top_nav.less
+++ b/src/component/basic/top_nav.less
@@ -169,7 +169,7 @@ html,body{
         .weixin:after {
           content: '-员工微信端-';
           position: absolute;
-          top: 90px;
+          top: 82px;
           left: 20px;
           color: #4a4a4a;
 
@@ -177,7 +177,7 @@ html,body{
         .app:after {
           content: '-员工APP端-';
           position: absolute;
-          top: 90px;
+          top: 82px;
           left: 20px;
           color: #4a4a4a;
 
@@ -249,8 +249,8 @@ html,body{
           position: absolute;
           top: 50px;
           right: -35px;
-          width: 220px;
-          height: 100px;
+          width: 330px;
+          height: 125px;
           border: 1px solid @colorMiddleGray;
           border-radius: 3px;
           background-color: @colorWhite;
@@ -266,18 +266,20 @@ html,body{
             transform: rotate(45deg);
           }
           .num{
-            font-size: 18px;
-            font-weight: 700;
-            height: 30px;
-            line-height: 50px;
+            font-size: 14px;
+            height: 25px;
+            font-weight: normal;
+            line-height: 45px;
             padding-left: 15px;
             span{
-              font-size: 14px;
-              font-weight: normal;
+              font-size: 16px;
+              font-weight: bold;
             }
-          }
-          .tip{
-            line-height: 30px;
+            .special{
+              font-size: 12px;
+              font-weight: normal;
+
+            }
           }
         }
       }
@@ -350,12 +352,12 @@ html,body{
     height: 100%;
   }
   .nav .jf_nav .jf_nav_content ul li a {
-   line-height: 55px;
+    line-height: 55px;
 
   }
   .nav .jf_nav .jf_nav_login {
-     line-height: 55px;
-   }
+    line-height: 55px;
+  }
   .nav .jf_nav .jf_nav_login .login_btn {
     display: inline-block;
     padding: 0 25px;
