--- a/src/component/homepage/pageone.ejs
+++ b/src/component/homepage/pageone.ejs
@@ -22,7 +22,7 @@
                         <div class="advantage1"><p>弹性福利</p></div>
                     </div>
                     <div class="lefttwo_circle jfMouseMove" data-distanceW="0.8">
-                        <div class="advantage4"><p>福利增值</p></div>
+                        <div class="advantage4"><p>补充医疗</p></div>
                     </div>
                     <div class="leftthree_circle jfMouseMove" data-distanceW="1.2">
                         <div class="advantage2"><p>薪酬代发</p></div>
