--- a/src/component/homepage/pagethree.ejs
+++ b/src/component/homepage/pagethree.ejs
@@ -36,7 +36,7 @@
                     <!--list 3 -->
                     <div class="shopping">
                         <div class="content">
-                            <p>周边商户卡券消费</p>
+                            <p>餐饮团建</p>
                             <p>企业：专款专用、员工满意度。</p>
                             <p>商户：员工日常消费、企业福利带来流量。</p>
                             <p>员工：平台售卡折扣、商家活动、嘉福活动</p>
