--- a/src/component/mobile/page_five.html
+++ b/src/component/mobile/page_five.html
@@ -7,7 +7,7 @@
     <div class="page_five_title">
         <div class="page_five_title_english">WHY CHOOSE</div>
         <div class="page_five_title_chinese">为什么选择嘉福</div>
-        <div class="page_five_title_icon"><img src="../../images/page_five/icon-line.png"/> </div>
+        <div class="page_five_title_icon"><img src="images/page_five/icon-line.png"/> </div>
     </div>
     <!--利益点-->
     <div class="page_five_benefit">
@@ -20,7 +20,7 @@
 
                 <div class="page_five_line_circle">
                     <div class="page_five_text">
-                        <img src="../../images/page_five/icon-computer-one.png"/>
+                        <img src="images/page_five/icon-computer-one.png"/>
                         <div class="text_one">用户满意度增加</div>
                         <div class="text_two">企业成本最小化员工满意度最大化</div>
 
@@ -29,7 +29,7 @@
 
                 <div class="page_five_line_circle">
                         <div class="page_five_text">
-                            <img src="../../images/page_five/icon-dialog.png"/>
+                            <img src="images/page_five/icon-dialog.png"/>
                             <div class="text_one">灵活组合福利</div>
                             <div class="text_two">弹性福利灵活组合的自主化福利平台</div>
 
@@ -38,7 +38,7 @@
 
                 <div class="page_five_line_circle">
                     <div class="page_five_text">
-                        <img src="../../images/page_five/icon-notebook.png"/>
+                        <img src="images/page_five/icon-notebook.png"/>
                         <div class="text_one">一站式福利平台</div>
                         <div class="text_two">一站式福利平台福利分配管理兼容企业原有供应商</div>
 
@@ -46,7 +46,7 @@
                 </div>
                 <div class="page_five_line_circle">
                     <div class="page_five_text">
-                        <img src="../../images/page_five/icon-pen.png"/>
+                        <img src="images/page_five/icon-pen.png"/>
                         <div class="text_one">贴合员工需求</div>
                         <div class="text_two">平台福利数据反馈更能合理决策紧随员工需求</div>
 
@@ -54,7 +54,7 @@
                 </div>
                 <div class="page_five_line_circle">
                     <div class="page_five_text">
-                        <img src="../../images/page_five/icon-computer-one.png"/>
+                        <img src="images/page_five/icon-computer-one.png"/>
                         <div class="text_one">用户满意度增加</div>
                         <div class="text_two">企业成本最小化员工满意度最大化</div>
 
@@ -76,8 +76,8 @@
     </div>
     <!--月球-->
     <div class="page_five_moon">
-        <div class="moon_shadow"><img src="../../images/page_five/icon-moon-shadow.png"/></div>
-        <div class="moon_circle"><img src="../../images/page_five/icon-moon.png"/> </div>
+        <div class="moon_shadow"><img src="images/page_five/icon-moon-shadow.png"/></div>
+        <div class="moon_circle"><img src="images/page_five/icon-moon.png"/> </div>
 
     </div>
 
