--- a/src/component/mobile/page_five.less
+++ b/src/component/mobile/page_five.less
@@ -61,7 +61,7 @@
 .content_block .page_five{
   height: 100%;
   width: 100%;
-  background: url("../../images/page_five/icon-background.png") no-repeat;
+  background: url("../images/page_five/icon-background.png") no-repeat;
   background-size: 100%;
   position: relative;
 
