--- a/src/component/mobile/page_four.html
+++ b/src/component/mobile/page_four.html
@@ -7,13 +7,13 @@
     <div class="page_four_title">
         <div class="page_four_title_english">WHAT IS</div>
         <div class="page_four_title_chinese">什么是弹性福利</div>
-        <div class="page_four_title_icon"><img src="../../images/page_four/icon-line.png"/> </div>
+        <div class="page_four_title_icon"><img src="images/page_four/icon-line.png"/> </div>
     </div>
     <!--利益点-->
     <div class="page_four_benefit">
 
         <div class="page_four_rocket">
-            <img src="../../images/page_four/icon-rocket.png"/>
+            <img src="images/page_four/icon-rocket.png"/>
 
             <div class="page_four_text">
                 <div class="page_four_text_one">嘉福平台</div>
@@ -22,19 +22,19 @@
             </div>
 
             <div class="page_four_icon">
-                <img src="../../images/page_four/icon-jiafu_one.png"/>
+                <img src="images/page_four/icon-jiafu_one.png"/>
             </div>
 
             <div class="page_four_sub_text">
 
                 <div>
-                    <img src="../../images/page_four/icon-company.png"/>
+                    <img src="images/page_four/icon-company.png"/>
                     <div class="sub_text_one">企业</div>
                     <div class="sub_text_two">平台优惠降低提供合规发票多种消费模式随心选</div>
                 </div>
 
                 <div>
-                    <img src="../../images/page_four/icon-people.png"/>
+                    <img src="images/page_four/icon-people.png"/>
                     <div class="sub_text_one">员工</div>
                     <div class="sub_text_two">福利商城 福利增值 企业周边商户会员卡等多种消费模式随心选择</div>
                 </div>
@@ -49,8 +49,8 @@
     </div>
     <!--月球-->
     <div class="page_four_moon">
-        <div class="moon_shadow"><img src="../../images/page_four/icon-moon_shadow.png"/></div>
-        <div class="moon_circle"><img src="../../images/page_four/icon-moon_circle.png"/> </div>
+        <div class="moon_shadow"><img src="images/page_four/icon-moon_shadow.png"/></div>
+        <div class="moon_circle"><img src="images/page_four/icon-moon_circle.png"/> </div>
 
 
     </div>
