--- a/src/component/mobile/page_seven.html
+++ b/src/component/mobile/page_seven.html
@@ -7,14 +7,13 @@
     <div class="page_seven_title">
         <div class="page_seven_title_english">REGISTER NOW</div>
         <div class="page_seven_title_chinese">开启您的嘉福之旅</div>
-        <div class="page_seven_title_icon"><img src="../../images/page_seven/icon-line.png"/></div>
+        <div class="page_seven_title_icon"><img src="images/page_seven/icon-line.png"/></div>
     </div>
     <!--注册-->
     <div class="page_seven_key">
-        <div class="page_seven_key_between">
+        <a class="page_seven_key_between" href="http://e.jia-fu.cn">
             <div>企业登录</div>
-        </div>
-
+        </a>
     </div>
 
     <div class="page_seven_bottom">
@@ -22,7 +21,7 @@
         <div class="page_seven_icon">
             <div class="icon">
                 <div class="icon_one">
-                    <img src="../../images/page_seven/icon-people.png"/>
+                    <img src="images/page_seven/icon-people.png"/>
                 </div>
                 <div class="text">
                     <div class="text_one">2,000+</div>
@@ -33,7 +32,7 @@
 
             <div class="icon">
                 <div class="icon_one">
-                    <img src="../../images/page_seven/icon-key.png"/>
+                    <img src="images/page_seven/icon-key.png"/>
                 </div>
                 <div class="text">
                     <div class="text_one">200,000+</div>
@@ -44,7 +43,7 @@
 
             <div class="icon">
                 <div class="icon_one">
-                    <img src="../../images/page_seven/icon-uptrend.png"/>
+                    <img src="images/page_seven/icon-uptrend.png"/>
                 </div>
                 <div class="text">
                     <div class="text_one">近十亿</div>
@@ -57,18 +56,19 @@
         <div class="bottom_text">
             <div class="bottom_text_one">
                 <div class="bottom_one">
-                    <div class="title">
+                    <div class="title" onclick="jfCustomerService.click()">
                         <div>
-                            <img src="../../images/page_seven/icon-wechat.png"/>
+                            <img src="images/page_seven/icon-wechat.png"/>
                         </div>
                         <div>咨询顾问</div>
                     </div>
                     <div class="title_text">
                         <p>服务时间:周一至周五(9:00-17:30)</p>
-                        <p>友情链接:<a>
-                            <img src="../../images/page_seven/icon-HanKow.png"/>
-                            <img src="../../images/page_seven/icon-Liehu.png"/>
-                        </a></p>
+                        <p>友情链接:</p>
+                            <a href="https://m.dianping.com" class="dp"> <img
+                                    src="images/page_seven/icon-HanKow.png"></a>
+                            <a href="https://m.liepin.com"><img src="images/page_seven/icon-Liehu.png"></a>
+                        </a>
                     </div>
 
 
