--- a/src/component/mobile/page_six.less
+++ b/src/component/mobile/page_six.less
@@ -20,7 +20,7 @@
 .content_block .page_six{
   width: 100%;
   height: 100%;
-  background: url("../../images/page_six/icon-bg.png") no-repeat;
+  background: url("../images/page_six/icon-bg.png") no-repeat;
   background-size: 100%;
 
   /*图标*/
