--- a/src/component/mobile/page_three.less
+++ b/src/component/mobile/page_three.less
@@ -28,7 +28,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  background: url("../../images/page_three/icon-bg.png") no-repeat;
+  background: url("../images/page_three/icon-bg.png") no-repeat;
   background-size: 100%;
 
 
