--- a/src/component/mobile/page_two.less
+++ b/src/component/mobile/page_two.less
@@ -32,7 +32,7 @@
 .content_block .page_two{
   height:100%;
   width: 100%;
-  background: url("../../images/page_two/icon-background.png") no-repeat;
+  background: url("../images/page_two/icon-background.png") no-repeat;
   background-size: 100%;
   position: relative;
 
