--- a/src/component/homepage/pagetwo.ejs
+++ b/src/component/homepage/pagetwo.ejs
@@ -25,9 +25,9 @@
                             <ul>
                                 <li><img src="images/jf_page4_i1.png">购物商城</li>
                                 <li><img src="images/jf_page4_i2.png">福利预支</li>
-                                <li><img src="images/jf_page4_i3.png">生活服务</li>
+                                <li><img src="images/jf_page4_i3.png">补充医疗</li>
                                 <li><img src="images/jf_page4_i4.png">电子卡券</li>
-                                <li><img src="images/jf_page4_i5.png">餐饮优惠</li>
+                                <li><img src="images/jf_page4_i5.png">食堂团餐</li>
                                 <li><img src="images/jf_page4_i6.png">余额增值</li>
                                 <div style="clear: both"></div>
                             </ul>
