--- a/src/component/mobile/page_four.less
+++ b/src/component/mobile/page_four.less
@@ -40,7 +40,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  background: url("../../images/page_four/icon-background.png") no-repeat;
+  background: url("../images/page_four/icon-background.png") no-repeat;
   background-size: 100% 100%;
 
 
