--- a/src/component/mobile/page_one.less
+++ b/src/component/mobile/page_one.less
@@ -9,7 +9,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  background: url("../../images/page_one/icon-background.png") no-repeat;
+  background: url("../images/page_one/icon-background.png") no-repeat;
   background-size: 100% 100%;
   .moveEle{
     transition: transform 0.5s linear;
