--- a/src/component/mobile/page_six.html
+++ b/src/component/mobile/page_six.html
@@ -7,23 +7,23 @@
     <div class="page_six_title">
         <div class="page_six_title_english">COOPERATIVE</div>
         <div class="page_six_title_chinese">嘉福合作伙伴</div>
-        <div class="page_six_title_icon"><img src="../../images/page_six/icon-line.png"/> </div>
+        <div class="page_six_title_icon"><img src="images/page_six/icon-line.png"/> </div>
     </div>
     <!--合作伙伴-->
     <div class="page_six_cooperative">
         <div class="page_six_icon">
             <div>
-                <img src="../../images/page_six/icon-LOCK.png"/>
+                <img src="images/page_six/icon-LOCK.png"/>
                 <div>乐扣乐扣</div>
             </div>
 
             <div>
-                <img src="../../images/page_six/icon-Meituan.png"/>
+                <img src="images/page_six/icon-Meituan.png"/>
                 <div>美团</div>
             </div>
 
          <div>
-             <img src="../../images/page_six/icon-HanKowThames.png"/>
+             <img src="images/page_six/icon-HanKowThames.png"/>
              <div>大众点评</div>
          </div>
 
@@ -31,17 +31,17 @@
 
         <div class="page_six_icon">
             <div>
-                <img src="../../images/page_six/icon-China-Mobile.png"/>
+                <img src="images/page_six/icon-China-Mobile.png"/>
                 <div>中国移动</div>
             </div>
 
             <div>
-                <img src="../../images/page_six/icon-Alipay.png"/>
+                <img src="images/page_six/icon-Alipay.png"/>
                 <div>支付宝</div>
             </div>
 
             <div>
-                <img src="../../images/page_six/icon-Thermos.png"/>
+                <img src="images/page_six/icon-Thermos.png"/>
                 <div>膳魔师</div>
             </div>
 
@@ -49,17 +49,17 @@
 
         <div class="page_six_icon">
             <div>
-                <img src="../../images/page_six/icon-Sunning.png"/>
+                <img src="images/page_six/icon-Sunning.png"/>
                 <div>苏宁易购</div>
             </div>
 
             <div>
-                <img src="../../images/page_six/icon-lqiyi.png"/>
+                <img src="images/page_six/icon-lqiyi.png"/>
                 <div>爱奇艺</div>
             </div>
 
             <div>
-                <img src="../../images/page_six/icon-sephora.png"/>
+                <img src="images/page_six/icon-sephora.png"/>
                 <div>丝芙兰</div>
             </div>
 
@@ -68,17 +68,17 @@
 
         <div class="page_six_icon">
             <div>
-                <img src="../../images/page_six/icon-shopone.png"/>
+                <img src="images/page_six/icon-shopone.png"/>
                 <div>1号店</div>
             </div>
 
             <div>
-                <img src="../../images/page_six/icon-Vip.png"/>
+                <img src="images/page_six/icon-Vip.png"/>
                 <div>唯品会</div>
             </div>
 
             <div>
-                <img src="../../images/page_six/icon-JingDong.png"/>
+                <img src="images/page_six/icon-JingDong.png"/>
                 <div>京东</div>
             </div>
 
@@ -86,17 +86,17 @@
 
         <div class="page_six_icon">
             <div>
-                <img src="../../images/page_six/icon-Amazon.png"/>
+                <img src="images/page_six/icon-Amazon.png"/>
                 <div>亚马逊</div>
             </div>
 
             <div>
-                <img src="../../images/page_six/icon-ctrip.png"/>
+                <img src="images/page_six/icon-ctrip.png"/>
                 <div>携程旅行</div>
             </div>
 
             <div>
-                <img src="../../images/page_six/icon-chaina-unicom.png"/>
+                <img src="images/page_six/icon-chaina-unicom.png"/>
                 <div>中国联通</div>
             </div>
 
@@ -104,17 +104,17 @@
 
         <div class="page_six_icon">
             <div>
-                <img src="../../images/page_six/icon-Sinopec.png"/>
+                <img src="images/page_six/icon-Sinopec.png"/>
                 <div>中国石化</div>
             </div>
 
             <div>
-                <img src="../../images/page_six/icon-levis.png"/>
+                <img src="images/page_six/icon-levis.png"/>
                 <div>李维斯</div>
             </div>
 
             <div>
-                <img src="../../images/page_six/icon-Metro-traffic.png"/>
+                <img src="images/page_six/icon-Metro-traffic.png"/>
                 <div>地铁交通</div>
             </div>
 
