--- a/src/component/mobile/page_two.html
+++ b/src/component/mobile/page_two.html
@@ -9,35 +9,35 @@
     <div class="page_two_title">
         <div class="page_two_title_english">MY WELFARE</div>
         <div class="page_two_title_chinese">我的福利 我做主</div>
-        <div class="page_two_title_icon"><img src="../../images/page_two/icon-line.png"/> </div>
+        <div class="page_two_title_icon"><img src="images/page_two/icon-line.png"/> </div>
     </div>
     <!--利益点-->
     <div class="page_two_benefit">
         <div class="page_two_background">
             <div class="page_two_benefit_background left_top">
 
-                <img src="../../images/page_two/icon-card.png"/>
+                <img src="images/page_two/icon-card.png"/>
                 <div class="page_two_text_one">我的福利我做主</div>
                 <div class="page_two_text_two">全场景福利消费</div>
                 <div class="page_two_text_two">模式轻松自选</div>
             </div>
 
             <div class="page_two_benefit_background right_top">
-                <img src="../../images/page_two/icon-circle.png"/>
+                <img src="images/page_two/icon-circle.png"/>
                 <div class="page_two_text_one">个性化定制</div>
                 <div class="page_two_text_two">300+供应商实惠采集</div>
                 <div class="page_two_text_two">更多更好更全</div>
             </div>
 
             <div class="page_two_benefit_background left_bottom">
-                <img src="../../images/page_two/icon-hand.png"/>
+                <img src="images/page_two/icon-hand.png"/>
                 <div class="page_two_text_one">福利选择一站通</div>
                 <div class="page_two_text_two">丰富资源高标准筛选</div>
                 <div class="page_two_text_two">告别比价</div>
             </div>
 
             <div class="page_two_benefit_background right_bottom">
-                <img src="../../images/page_two/icon-box.png"/>
+                <img src="images/page_two/icon-box.png"/>
                 <div class="page_two_text_one">福利价值最大化</div>
                 <div class="page_two_text_two">搭建企业员工桥梁</div>
                 <div class="page_two_text_two">用心关怀</div>
@@ -46,8 +46,8 @@
     </div>
     <!--月球-->
     <div class="page_two_moon">
-        <div class="moon_circle"><img src="../../images/page_two/icon-moon.png"/></div>
-        <div class="moon_shadow"><img src="../../images/page_two/icon-moon-shadow.png"/> </div>
+        <div class="moon_circle"><img src="images/page_two/icon-moon.png"/></div>
+        <div class="moon_shadow"><img src="images/page_two/icon-moon-shadow.png"/> </div>
 
 
 
