最新版本嘉福官网pc&移动端

--- a/src/component/mobile/page_one.html
+++ b/src/component/mobile/page_one.html
@@ -127,8 +127,9 @@
                 <div class="drop_down_text">
 
                     <div class="text_telephone">
-                        <a  href="tel:400-821-6990">上海 - 021-64280689</a>
-                        <a href="tel:400-821-6990" >北京 - 010-56280622</a>
+                        <a  href="tel:021-64280689">上海 - 021-64280689</a>
+                        <a href="tel:010-56280622" >北京 - 010-56280622</a>
+                        <a href="tel:400-821-6990" >员工客服 - 400-821-6990</a>
                     </div>
 
                 </div>
