--- a/src/view/homepage_mobile.html
+++ b/src/view/homepage_mobile.html
@@ -63,10 +63,9 @@
 
             _this.isXMove = 1;//是否需要移动
 
-            _this.moveDistance=0;//移动的距离
+            _this.moveDistance = 0;//移动的距离
 
-            _this.showheight=30;//可以滚动的高度
-
+            _this.showheight = 30;//可以滚动的高度
 
 
             var firstTouchesClientY; //初次点击的位置
@@ -76,28 +75,27 @@
             _this.initPoint();//增加右侧导航
 
 
-            addEventListener("touchstart",getFirstPosition,false);
+            addEventListener("touchstart", getFirstPosition, false);
 
-            addEventListener('touchend', function(){
+            addEventListener('touchend', function () {
                 getLastPosition();
 
-                if (_this.isXMove && Math.abs(_this.moveDistance)>_this.showheight) {
+                if (_this.isXMove && Math.abs(_this.moveDistance) > _this.showheight) {
 
                     norXMove();
 
-                    _this.changeScroll( _this.moveDistance)
+                    _this.changeScroll(_this.moveDistance)
 
                 }
 
-            },false);
+            }, false);
 
-            addEventListener("touchmove",function(event){
+            addEventListener("touchmove", function (event) {
 
-                var evt = event? event: window.event;
+                var evt = event ? event : window.event;
                 evt.preventDefault()
 
-            },false)
-
+            }, false)
 
 
             //延迟在变化
@@ -115,30 +113,30 @@
 
 
             //初始移送的位置
-            function getFirstPosition(event){
+            function getFirstPosition(event) {
 
-                var evt = event? event: window.event;
+                var evt = event ? event : window.event;
 
-               // evt.preventDefault()
+                // evt.preventDefault()
 
-                firstTouchesClientY=parseInt(evt.touches[0].clientY);//当前点击事件距离屏幕顶部的距离(初始位置);
+                firstTouchesClientY = parseInt(evt.touches[0].clientY);//当前点击事件距离屏幕顶部的距离(初始位置);
 
                 //console.log(firstTouchesClientY)
 
             }
 
             //手指即将离开的位置
-            function getLastPosition(event){
+            function getLastPosition(event) {
 
-                var evt = event? event: window.event;
+                var evt = event ? event : window.event;
 
                 //evt.preventDefault()
 
-                moveTouchesClientY=parseInt(evt.changedTouches[0].clientY);//末尾位置;
+                moveTouchesClientY = parseInt(evt.changedTouches[0].clientY);//末尾位置;
 
-                _this.moveDistance=moveTouchesClientY- firstTouchesClientY;//最终移动的距离
+                _this.moveDistance = moveTouchesClientY - firstTouchesClientY;//最终移动的距离
 
-               // console.log(moveTouchesClientY)
+                // console.log(moveTouchesClientY)
 
 
             }
@@ -210,7 +208,6 @@
             var thisNeedMove = i + scrollBlockMove.thisPosition;//需要移动的位置
 
 
-
             //计算移动的绝对值
             if (thisNeedMove != 0) {
 
@@ -279,259 +276,6 @@
 
     };
 
-    //嘉福客服模块
-    var jfCustomerService = {
-
-        init: function (service, token) {//初始化
-
-            if (!$("#MEIQIA-PANEL-HOLDER").length > 0) {
-
-                var isIosProduct = 0;                                                                                         //判断是不是可能出现位移的页面
-
-                function jfServiceInit(visibility) {
-
-                    jfServiceSwitch(visibility);
-
-                    if (browser.os.iOS && $('html').hasClass('ovfHiden') && $('body').hasClass('ovfHiden')) {                    //解决ios10的在详情页聊天移位问题。
-                        isIosProduct = 1;
-                        $(document).scrollTop(0);
-                    }
-                }
-
-                function jfServiceSwitch(visibility) {
-
-                    if (visibility === 'visible') {
-
-                        if (isIosProduct) {                                                                                   //解决ios10的在详情页聊天移位问题。
-                            $('html').removeClass('ovfHiden');
-                            $('body').removeClass('ovfHiden')
-                        }
-
-                        $('#MEIQIA-PANEL-HOLDER').show().removeClass('hide').addClass('show');
-                        setTimeout(
-                            function () {
-                                $('#MEIQIA-PANEL-HOLDER').removeClass('show');
-                            }
-                            , 300);
-
-                    }
-
-                    else {
-                        // 你可以根据自己的需求编写相应的代码
-                        $('#MEIQIA-PANEL-HOLDER').addClass('hide').css('left', 0).css('z-index', 600);
-                        setTimeout(
-                            function () {
-                                $('#MEIQIA-PANEL-HOLDER').hide();
-
-                            }
-                            , 300);
-
-                        if (isIosProduct) {                                                                                   //解决ios10的在详情页聊天移位问题。
-                            $('html').addClass('ovfHiden');
-                            $('body').addClass('ovfHiden');
-                            $(document).scrollTop(0);
-                        }
-
-                    }
-                }
-
-                (function (m, ei, q, i, a, j, s) {
-                    m[i] = m[i] || function () {
-                            (m[i].a = m[i].a || []).push(arguments)
-                        };
-                    j = ei.createElement(q);
-                    s = ei.getElementsByTagName(q)[0];
-                    j.async = true;
-                    j.charset = 'UTF-8';
-                    j.src = '//static.meiqia.com/dist/meiqia.js';
-                    s.parentNode.insertBefore(j, s);
-                })(window, document, 'script', '_MEIQIA');
-                _MEIQIA('entId', '39750');
-
-                // 在这里开启手动模式（必须紧跟美洽的嵌入代码）
-                _MEIQIA('manualInit');
-
-
-                // 你可以自己的代码中选择合适的时机来调用手动初始化
-                _MEIQIA('withoutBtn');//不使用插件按钮
-                _MEIQIA('allSet', jfServiceInit);//初始设置
-                _MEIQIA('getPanelVisibility', jfServiceSwitch);//改变状态后设置
-                _MEIQIA('init');//初始化
-
-                //指定客服
-                _MEIQIA('assign', {
-                    groupToken: token
-                });
-                //用户信息导入
-                _MEIQIA('metadata', service);
-            }
-        },
-        click: function () { //导入使用
-            _MEIQIA('showPanel')
-        }
-    };
-
-    //嘉福客服模块结束
-
-    jfCustomerService.init({//用户信息
-        name: '阿陈',// 名字
-        address: '西伯利亚',// 地址
-        email: '1313@qq.com',// 邮箱
-        age: '16',// 年龄
-        tel: '110',// 电话
-        comment: '很帅',// 备注
-        gender: '男',// 性别
-        qq: '1234567',// QQ
-        weibo: '',// 微博
-        weixin: '',// 微信
-        '公司名称':'上海淘略数据有限公司',
-        '公司编号':'123ksuhdaf891274',
-        '员工编号':'1234567890123456'
-    })
-    /*上拉以及下拉插件*/
-    /*2017/3/8
-     * 谯丹*/
-    var jfFrameDrag = {
-
-        dragEleshow: function (details) {/*出现方法*/
-
-            var _this = this;
-
-            _this.moveDistance = details.moveDistance || 0;//向上移动的距离
-
-            _this.initDistance=details.initDistance || '100%';//初始状态的位置,默认向上-100%或者向下移动100%
-
-            _this.targetButton=details.targetButton || 0;//点击的目标元素。ID选择器
-
-            _this.targetDragName = details.targetDragName || 0;//出现的目标元素；calss选择器
-
-            _this.hideButton = details.hideButton || 'check_btn';//关闭的按钮,class选择器
-
-            _this.showFn = details.showFn || 0;//同时出现的函数
-
-            _this.hideFn = details.hideFn || 0;//同时关闭的函数
-
-
-
-
-            var $main = document.getElementsByClassName('frame-main')[0];//主体
-
-            var $drag = document.getElementsByClassName('mask_drag')[0];//阴影
-
-
-            if (_this.targetDragName) {//如果当前页面有多个上拉框，则选择器需要的哪个
-
-                var $main = document.getElementsByClassName(_this.targetDragName)[0].getElementsByClassName('frame-main')[0];//主体
-
-                var $drag = document.getElementsByClassName(_this.targetDragName)[0].getElementsByClassName('mask_drag')[0]; //阴影
-
-            }
-
-            /*出现的方法*/
-            _this.run=function(){
-
-
-                if ($main.style.display = "none") {//如果为隐藏，下拉框收起中
-
-                    document.getElementsByTagName("body")[0].className = "ovfHiden";//页面禁止滚动
-                    document.getElementsByTagName("html")[0].className = "ovfHiden";//页面禁止滚动
-
-                    $drag.style.display = "block";
-                    $main.style.display = 'block';
-
-                    setTimeout(function () {
-
-                        $drag.style.opacity = "0.6";
-
-                        $main.style.transform = "translate3d(0," + _this.moveDistance + ",0)";//到指定展现位置
-                        $main.style.webkitTransform = "translate3d(0," + _this.moveDistance + ",0)";
-
-
-                    }, 10);
-
-
-                    if (_this.showFn) {
-                        _this.showFn(); //执行 弹出时加入的函数参数
-                    }
-
-                }
-
-            };
-            /*出现的方法*/
-            _this.stop=function(){
-
-                if ($main.style.display = "block") {
-
-                    $main.style.transform = "translate3d(0,"+ _this.initDistance + ",0)";//到达平滑过渡开始位置
-                    $main.style.webkitTransform = "translate3d(0,"+ _this.initDistance + ",0)";
-
-                    //阴影透明度变化之后再发生效果
-                    $drag.style.opacity = "0";
-
-
-                    document.getElementsByTagName("body")[0].className = "";//页面可以滚动
-                    document.getElementsByTagName("html")[0].className = "";//页面可以滚动
-
-
-                    if (_this.hideFn) {
-                        _this.hideFn(); //执行 关闭时加入的函数参数
-                    }
-
-                }
-
-                $drag.addEventListener('webkitTransitionEnd', opacityChange, false);
-                $drag.addEventListener('transitionend', opacityChange, false);
-
-                function opacityChange() {
-
-                    $drag.style.display = "none";
-
-                    $drag.removeEventListener('webkitTransitionEnd', opacityChange, false);
-                    $drag.removeEventListener('transitionend', opacityChange, false); //取消平滑过渡后的绑定事件
-
-                } //事件解绑
-
-
-                $main.addEventListener('webkitTransitionEnd', listChange, false);
-                $main.addEventListener('transitionend', listChange, false); //主体的过渡事件
-
-
-                function listChange() {
-
-                    $main.style.display = "none";
-
-                    $main.removeEventListener('webkitTransitionEnd', listChange, false);
-                    $main.removeEventListener('transitionend', listChange, false); //事件解绑
-
-                }
-            };
-
-
-            if(_this.targetButton){//如果点击元素存在
-                /*目标按钮点击出现*/
-                document.getElementById(_this.targetButton).onclick=function(){
-
-                    _this.run();
-                };
-            }
-
-
-
-            /*阴影点击关闭*/
-            $drag.addEventListener("click",function(){
-                _this.stop()
-            },false);
-
-            /*关闭按钮点击关闭*/
-            $main.getElementsByClassName( _this.hideButton)[0].onclick=function(){
-                _this.stop()
-            }
-        }
-
-    };
-
-    /*上拉下拉插件结束*/
-
     var jfshakeMove = {
 
         init: function () {
@@ -563,12 +307,12 @@
                     //获取当前元素权重
                     distanceW = allMoveEle[i].getAttribute('data-distanceW');
 
-                    if(Math.abs(delG)>80||Math.abs(delB)>160){//设置临界点变动
+                    if (Math.abs(delG) > 80 || Math.abs(delB) > 160) {//设置临界点变动
 
 
-                    }else {
+                    } else {
                         //设置偏移
-                        this.transformAll(allMoveEle[i],(delG/1.5)*distanceW,(delB/3)*distanceW);
+                        this.transformAll(allMoveEle[i], (delG / 1.5) * distanceW, (delB / 3) * distanceW);
                     }
 
                     //初始化偏移
@@ -583,7 +327,7 @@
         //通用变化兼容性
         transformAll: function (ele, disX, disY) {
 
-            setTimeout(function(){
+            setTimeout(function () {
                 ele.style.transform = 'translate(' + disX + 'px,' + disY + 'px)';
 
                 ele.style.webkitTransform = 'translate(' + disX + 'px,' + disY + 'px)';
@@ -594,27 +338,15 @@
 
                 ele.style.mozTransform = 'translate(' + disX + 'px,' + disY + 'px)';
 
-            },200);
+            }, 200);
         }
 
-    }
+    };
 
-    jfshakeMove.init()
+    jfshakeMove.init();
+    scrollBlockMove.init();
 
 
-    scrollBlockMove.init()
-
-    //确认订单上拉框
-
-    var orderDragUp=new jfFrameDrag.dragEleshow({
-
-          "targetButton":"service_telephone",//点击的目标元素。ID选择器
-
-       // "targetDragName":"frame_checkorder",//出现的目标元素，calss选择器
-
-        "hideButton":"drop_down_delete"//关闭按钮，class选择器
-
-    });
     function judgeBrowserJump() {
 
         if (browser.supplier.wechat) {  //判断是否微信内置浏览器
@@ -639,6 +371,17 @@
 
     }, false);
 
+    //确认订单上拉框
+
+    var orderDragUp = new jfFrameDrag.dragEleshow({
+
+        "targetButton": "service_telephone",//点击的目标元素。ID选择器
+
+        // "targetDragName":"frame_checkorder",//出现的目标元素，calss选择器
+
+        "hideButton": "drop_down_delete"//关闭按钮，class选择器
+
+    });
 
 </script>
 </html>
