--- a/src/view/homepage_mobile.html
+++ b/src/view/homepage_mobile.html
@@ -289,25 +289,46 @@
 
     var jfshakeMove = {
 
+        varInit: {
+
+            'canMove': true
+
+        },
+
         init: function () {
 
             //判断是否是手机晃动事件
             if (window.DeviceOrientationEvent) {
 
                 window.addEventListener('deviceorientation', this.mouseMove.bind(this), false);
+
+                this.android(0.3)
             }
 
         },
 
+
+
         mouseMove: function (event) {
-            var _this = this;
+
             var event = event || window.event;
 
-            var delA = event.alpha;    // alpha轴偏转角
             var delB = event.beta;    // beta轴偏转角（绕x轴旋转的角度）
+
             var delG = event.gamma;    // gamma轴偏转角(绕y轴旋转的角度)
 
-            if (delA != null || delB != null || delG != null) {
+            if (delB && delG && this.varInit.canMove) {
+
+                this.beta = event.beta;
+
+                this.gamma = event.gamma;
+
+                this.varInit.canMove = false;
+
+            }
+
+            if (delB != null || delG != null) {
+
                 var allMoveEle = document.getElementsByClassName('moveEle');
 
                 //初始化移动的权重
@@ -318,14 +339,33 @@
                     //获取当前元素权重
                     distanceW = allMoveEle[i].getAttribute('data-distanceW');
 
-                    if (Math.abs(delG) > 80 || Math.abs(delB) > 160) {//设置临界点变动
-
-
-                    } else {
+                    if (distanceW && Math.abs(delG - this.gamma) <= 60 && Math.abs(delB - this.beta) <= 120) {
                         //设置偏移
-                        this.transformAll(allMoveEle[i], (delG / 1.5) * distanceW, (delB / 3) * distanceW);
+                        this.transformAll(allMoveEle[i], ((delG - this.gamma) / 1.5) * distanceW, ((delB - this.beta) / 3) * distanceW);
+
+                        this.transformX = ((delG - this.gamma) / 1.5);
+
+                        this.transformY = ((delB - this.beta) / 3);
+
                     }
 
+                    else if (distanceW && Math.abs(delG - this.gamma) <= 60 && Math.abs(delB - this.beta) > 120) {
+                        //设置偏移
+                        this.transformAll(allMoveEle[i], ((delG - this.gamma) / 1.5) * distanceW, this.transformY* distanceW);
+
+                    }
+
+                    else if (distanceW && Math.abs(delG - this.gamma) > 60 && Math.abs(delB - this.beta) <= 120) {
+                        //设置偏移
+                        this.transformAll(allMoveEle[i], this.transformX* distanceW, ((delB - this.beta) / 3) * distanceW);
+
+                    }
+
+                    else{
+
+                        this.transformAll(allMoveEle[i], this.transformX* distanceW, this.transformY* distanceW);
+
+                    }
                     //初始化偏移
                     distanceW = 1;
 
@@ -343,14 +383,28 @@
 
                 ele.style.webkitTransform = 'translate(' + disX + 'px,' + disY + 'px)';
 
-                ele.style.oTransform = 'translate(' + disX + 'px,' + disY + 'px)';
-
-                ele.style.msTransform = 'translate(' + disX + 'px,' + disY + 'px)';
-
-                ele.style.mozTransform = 'translate(' + disX + 'px,' + disY + 'px)';
-
             }, 200);
+        },
+
+    android: function (ms) {
+
+        var u = navigator.userAgent;
+
+        if (!!u.match(/Android/i)) {//安卓机型
+
+            var allMoveEle = document.getElementsByClassName('moveEle');//当前所有可以的移动的元素
+
+            for (var i = 0; i < allMoveEle.length; i++) {
+
+                allMoveEle[i].style.transition = "transform "+ms+"s linear";
+
+                allMoveEle[i].style.webkitTransform = "-webkit-transition "+ms+"s linear";
+            }
+
         }
+
+    }
+
 
     };
 
@@ -371,16 +425,6 @@
 
     }
 
-    //判断是否为安卓 过渡平滑
-    addEventListener('load', function () {
-
-        if (browser.os.android) {
-
-            $('.moveEle').css("transition", "transform 0.3s linear")
-        }
-
-
-    }, false);
 
     //确认订单上拉框
 
