更改联系我们页面

--- a/src/component/mobile/page_eight.html
+++ b/src/component/mobile/page_eight.html
@@ -45,7 +45,7 @@
             <div class="area_sub">ChengDu</div>
             <div class="area_title">成都</div>
             <div class="area_address">地址：成都市红星路二段70号四川日报大厦B区4楼</div>
-            <div class="area_telphone">电话：<a href="180 8111 9126">180 8111 9126</a></div>
+            <div class="area_telphone">电话：<a href="tel:180 8111 9126">180 8111 9126</a></div>
         </div>
 
         <div class="frame">
@@ -85,7 +85,7 @@
             <div class="area_sub">HangZhou</div>
             <div class="area_title">杭州</div>
             <div class="area_address">地址：浙江省杭州市拱墅区潮王路225号红石中央大厦602室</div>
-            <div class="area_telphone">电话：<a href="0571-85376027">0571-85376027</a></div>
+            <div class="area_telphone">电话：<a href="tel:0571-85376027">0571-85376027</a></div>
         </div>
 
         <div class="frame">
