更改联系我们页面弹出框

--- a/src/component/mobile/address_box.html
+++ b/src/component/mobile/address_box.html
@@ -1,7 +1,7 @@
 <!--地址选择弹出框-->
 
 
-<div id="area_block_show">
+<div id="area_block_show" class="area_block_show">
     <div class="area_message">
         <div class="area_block_show_title">
             <div class="show_title">北京</div>
@@ -13,10 +13,7 @@
 
     </div>
 
-
-    <div class="area_black_box"></div>
-
-
-
-
 </div>
+
+
+<div class="area_black_box"></div>
