--- a/src/component/mobile/page_eight.html
+++ b/src/component/mobile/page_eight.html
@@ -104,6 +104,22 @@
             <div class="area_telphone">电话：<a href="tel:0755-86089320">0755-86089320</a></div>
         </div>
 
+        <div class="frame">
+            <div class="area">青岛</div>
+            <div class="area_sub">QingDao</div>
+            <div class="area_title">青岛</div>
+            <div class="area_address">地址：青岛市南区颐和国际A座1609室</div>
+            <div class="area_telphone">电话：<a href="tel:0532-82152285">0532-82152285</a></div>
+        </div>
+
+        <div class="frame">
+            <div class="area">济南</div>
+            <div class="area_sub">JiNan</div>
+            <div class="area_title">济南</div>
+            <div class="area_address">地址：济南市市中区英雄山路祥泰广场5#楼2008室</div>
+            <div class="area_telphone">电话：<a href="tel:17710142588">17710142588</a></div>
+        </div>
+
     </div>
 
 
