--- a/src/component/mobile/page_eight.less
+++ b/src/component/mobile/page_eight.less
@@ -8,7 +8,7 @@
   .contact_us{
     .frame{
       &:nth-child(1),&:nth-child(2),&:nth-child(3),&:nth-child(4),&:nth-child(5),&:nth-child(6),&:nth-child(7),
-      &:nth-child(8),&:nth-child(9),&:nth-child(10),&:nth-child(11),&:nth-child(12){
+      &:nth-child(8),&:nth-child(9),&:nth-child(10),&:nth-child(11),&:nth-child(12),&:nth-child(13),&:nth-child(14){
         transform: translate3d(0, 0, 0);
         opacity: 1;
       }
@@ -129,6 +129,16 @@
         transform: translate3d(0,100%,0);
         opacity: 0;
         transition: transform .5s 1.3s,opacity .5s 1.3s;
+      }
+      &:nth-child(13){
+        transform: translate3d(0,100%,0);
+        opacity: 0;
+        transition: transform .5s 1.5s,opacity .5s 1.5s;
+      }
+      &:nth-child(14){
+        transform: translate3d(0,100%,0);
+        opacity: 0;
+        transition: transform .5s 1.5s,opacity .5s 1.5s;
       }
 
       .area_title,.area_address,.area_telphone{
