--- a/src/component/contact/map.less
+++ b/src/component/contact/map.less
@@ -1738,6 +1738,290 @@
 
     }
 
+    .branch_jinan{
+      .branch_name{
+        position: absolute;
+        top: 32%;
+        right: 37%;
+        z-index: 20;
+        text-align: center;
+
+        div{
+          float: left;
+          padding-right:6px;
+          p{
+
+            font-size: 16px;
+            text-align: center;
+            padding-bottom: 3px;
+
+            &:first-child{
+              font-weight: bold;
+            }
+
+          }
+        }
+
+        img{
+          float: left;
+          padding-right: 10px;
+          width: 24px;
+        }
+        &:hover{
+          z-index: 25;
+        }
+        &:hover +.branch_map{
+          opacity:1;
+          filter:alpha(opacity=100);
+          z-index: 21;
+        }
+        &:hover + .branch_map + .branch_info{
+          opacity: 1;
+          filter:Alpha(opacity=100);
+          z-index: 40;
+        }
+        &:hover + .branch_map + .branch_info .content{
+          filter:Alpha(opacity=100);
+        }
+        &:hover + .branch_map + .branch_info .content .final-content{
+          filter:Alpha(opacity=100);
+        }
+        &:hover + .branch_map + .branch_info .initial-content_bottom{
+          transform: rotatex(0) scaleY(1)
+
+        }
+      }
+      .branch_map{
+        opacity:0;
+        filter:alpha(opacity=0);
+        position: absolute;
+        top: 3%;
+        right: 21%;
+        z-index: 1;
+        width: 30%;
+        transition: opacity 0.5s;
+        img{
+          width: 100%;
+        }
+      }
+      .branch_info{
+        opacity:0;
+        filter:Alpha(opacity=0);
+        position: absolute;
+        top:6%;
+        right: 22%;
+        width: 30%;
+        margin: 0 auto;
+        transition: all 0.5s;
+        transform: rotate(180deg);
+
+        .content{
+          position: relative;
+          filter:alpha(opacity=0);
+          .arrow_up{
+            width: 0;
+            height: 0;
+            border-left: 60px solid transparent;
+            border-right: 15px solid transparent;
+            border-bottom: 25px solid #fff;
+            margin: 0 auto;
+            z-index: 1;
+
+          }
+          .initial-content{
+            -webkit-perspective: 1000px;
+            perspective: 1000px;
+          }
+          .initial-content_top{
+            width: 85%;
+            height: 90px;
+            background: #fff;
+            margin: 0 auto;
+            border-bottom: solid 1px #dddddd;
+            box-shadow: 0 -12px 20px 0px #ddd inset;;
+          }
+          .initial-content_bottom{
+            width: 85%;
+            height: 90px;
+            background:white;
+            margin: 0 auto;
+            transition: all 0.3s;
+            transform-style:preserve-3d;
+            transform-origin:top;
+            transform: rotateX(180deg) scaleY(0.8);
+
+          }
+          .final-content{
+            filter:Alpha(opacity=0);
+            width: 85%;
+            margin: 0 auto;
+            position: absolute;
+            top:55px;
+            left: 22px;
+            transform: rotate(-180deg);
+            h3{
+              font-size: 26px;
+              color: #10A6E2;
+              text-align: left;
+              padding-left: 5%;
+              margin: 10px auto;
+              padding-bottom: 10px;
+            }
+            p{
+              font-size: 16px;
+              text-align:left;
+              padding-bottom: 15px;
+              padding-right: 5%;
+              padding-left: 5%;
+            }
+          }
+
+        }
+      }
+    }
+
+    .branch_qingdao{
+      .branch_name{
+        position: absolute;
+        top: 32%;
+        right: 29%;
+        z-index: 20;
+        text-align: center;
+
+        div{
+          float: right;
+          padding-left:6px;
+          p{
+
+            font-size: 16px;
+            text-align: center;
+            padding-bottom: 3px;
+
+            &:first-child{
+              font-weight: bold;
+            }
+
+          }
+        }
+
+        img{
+          float: left;
+          padding-right: 10px;
+          width: 24px;
+        }
+        &:hover{
+          z-index: 25;
+        }
+        &:hover +.branch_map{
+          opacity:1;
+          filter:alpha(opacity=100);
+          z-index: 21;
+        }
+        &:hover + .branch_map + .branch_info{
+          opacity: 1;
+          filter:Alpha(opacity=100);
+          z-index: 40;
+        }
+        &:hover + .branch_map + .branch_info .content{
+          filter:Alpha(opacity=100);
+        }
+        &:hover + .branch_map + .branch_info .content .final-content{
+          filter:Alpha(opacity=100);
+        }
+        &:hover + .branch_map + .branch_info .initial-content_bottom{
+          transform: rotatex(0) scaleY(1)
+
+        }
+      }
+      .branch_map{
+        opacity:0;
+        filter:alpha(opacity=0);
+        position: absolute;
+        top: 3%;
+        right: 21%;
+        z-index: 1;
+        width: 30%;
+        transition: opacity 0.5s;
+        img{
+          width: 100%;
+        }
+      }
+      .branch_info{
+        opacity:0;
+        filter:Alpha(opacity=0);
+        position: absolute;
+        top: 5%;
+        right: 18%;
+        width: 30%;
+        margin: 0 auto;
+        transition: all 0.5s;
+        transform: rotate(180deg);
+
+        .content{
+          position: relative;
+          filter:alpha(opacity=0);
+          .arrow_up{
+            width: 0;
+            height: 0;
+            border-left: 60px solid transparent;
+            border-right: 15px solid transparent;
+            border-bottom: 25px solid #fff;
+            margin: 0 auto;
+            z-index: 1;
+
+          }
+          .initial-content{
+            -webkit-perspective: 1000px;
+            perspective: 1000px;
+          }
+          .initial-content_top{
+            width: 85%;
+            height: 90px;
+            background: #fff;
+            margin: 0 auto;
+            border-bottom: solid 1px #dddddd;
+            box-shadow: 0 -12px 20px 0px #ddd inset;;
+          }
+          .initial-content_bottom{
+            width: 85%;
+            height: 90px;
+            background:white;
+            margin: 0 auto;
+            transition: all 0.3s;
+            transform-style:preserve-3d;
+            transform-origin:top;
+            transform: rotateX(180deg) scaleY(0.8);
+
+          }
+          .final-content{
+            filter:Alpha(opacity=0);
+            width: 85%;
+            margin: 0 auto;
+            position: absolute;
+            top: 55px;
+            left: 22px;
+            transform: rotate(-180deg);
+            h3{
+              font-size: 26px;
+              color: #10A6E2;
+              text-align: left;
+              padding-left: 5%;
+              margin: 15px auto;
+              padding-bottom: 10px;
+            }
+            p{
+              font-size: 16px;
+              text-align:left;
+              padding-bottom: 15px;
+              padding-right: 5%;
+              padding-left: 5%;
+            }
+          }
+
+        }
+      }
+    }
+
 
 
 
@@ -1840,5 +2124,28 @@
   .contact_main .company_map .branch_guangzhou .branch_name {
     bottom: 9%;
     left: 48%;
+  }
+
+  .contact_main .company_map .branch_jinan .branch_info .content .final-content{
+    top: 30px;
+  }
+
+  .contact_main .company_map .branch_qingdao .branch_info .content .final-content{
+    top: 40px;
+  }
+
+  .contact_main .company_map .branch_qingdao .branch_name {
+  top: 32%;
+    right: 27.5%;
+  }
+
+  .contact_main .company_map .branch_qingdao .branch_info{
+    top: -3%;
+    right: 18%;
+  }
+
+  .contact_main .company_map .branch_jinan .branch_info{
+    top: -3%;
+    right: 23%;
   }
 }
