--- a/src/component/homepage/pageone.less
+++ b/src/component/homepage/pageone.less
@@ -84,9 +84,9 @@
     .banner_content {
       position: absolute;
       width: 1073px;
-      top: 52%;
+      top: 40%;
       left: 50%;
-      margin: -252px 0 0 -550px;
+      margin: -220px 0 0 -537px;
       .title {
         text-align: center;
         font-weight: lighter;
@@ -391,7 +391,9 @@
 @media screen and(max-width: 1374px ) {
 
   .jf_page1_banner .banner_bg .banner_content {
-    margin: -220px 0 0 -575px;
+    top: 50%;
+    left: 50%;
+    margin: -220px 0 0 -537px;
   }
   .jf_page1_banner .banner_bg .banner_content .ipad_bg {
     position: absolute;
