--- a/src/component/homepage/pagesex.less
+++ b/src/component/homepage/pagesex.less
@@ -23,6 +23,7 @@
     .page6_content {
       position: absolute;
       width: 1073px;
+      height: 800px;
       top: 50%;
       left: 50%;
       margin: -400px 0 0 -535px;
@@ -64,6 +65,7 @@
           position: absolute;
           top: 38%;
           left: 44%;
+          left: calc((1073px - 144px)/2);
           font-size: 24px;
           color: @colorDarkGray;
         }
