--- a/src/component/homepage/pagethree.less
+++ b/src/component/homepage/pagethree.less
@@ -18,16 +18,16 @@
   overflow: hidden;
   background-color: @colorWhite;
   .service_bg {
+    position: relative;
     height: 100%;
     max-width: 1200px;
     margin: 0 auto;
     .page3_content {
       position: absolute;
       width: 1073px;
-      height: 442px;
-      top: 50%;
+      top: 45%;
       left: 50%;
-      margin: -450px 0 0 -535px;
+      margin: -400px 0 0 -537px;
       /*标题*/
       .page3_title {
         position: relative;
@@ -68,7 +68,8 @@
         .title_text {
           position: absolute;
           top: 38%;
-          left: 44%;
+          left: 40%;
+          left: calc((1073px - 168px)/2);
           font-size: 24px;
           color: @colorDarkGray;
         }
@@ -452,12 +453,16 @@
     }
     @media screen and (max-width: 1690px) {
       .page3_content {
-        margin: -355px 0 0 -535px;
+        top: 50%;
+        left: 50%;
+        margin: -220px 0 0 -537px;
       }
     }
     @media screen and (max-width: 1374px) {
       .page3_content {
-        margin: -310px 0 0 -535px;
+        top: 50%;
+        left: 50%;
+        margin: -310px 0 0 -537px;
       }
     }
   }
