--- a/src/component/homepage/pagefour.less
+++ b/src/component/homepage/pagefour.less
@@ -74,10 +74,10 @@
       .page2_content {
         position: absolute;
         width: 1073px;
-        height: 442px;
+        height: 800px;
         top: 50%;
         left: 50%;
-        margin: -400px 0 0 -535px;
+        margin: -400px 0 0 -537px;
         /*title*/
         .page2_title {
           position: relative;
@@ -115,7 +115,8 @@
           .title_text {
             position: absolute;
             top: 38%;
-            left: 42%;
+            left: 40%;
+            left: calc((1073px - 192px)/2);
             font-size: 24px;
             color: @colorDarkGray;
           }
