--- a/src/component/platform/banner.less
+++ b/src/component/platform/banner.less
@@ -134,7 +134,7 @@
             margin: -110px 0 0 60px;
           }
           &:after {
-            content: '嘉福弹性福利平台';
+            content: '\5609\798f\5f39\6027\798f\5229\5e73\53f0';
             position: absolute;
             bottom: -65%;
             left: 10%;
@@ -185,7 +185,7 @@
                           }
                         }*/
           &:after {
-            content: '商户';
+            content: '\5546\6237';
             position: absolute;
             bottom: -45%;
             left: 30%;
@@ -194,7 +194,7 @@
             font-weight: bold;
           }
           &:before {
-            content: '▼ ';
+            content: '\25BC';
             position: absolute;
             bottom: -25%;
             left: 40%;
@@ -289,7 +289,7 @@
                        }
                      }*/
           &:after {
-            content: '企业';
+            content: '\4f01\4e1a';
             position: absolute;
             bottom: -45%;
             left: 30%;
@@ -298,7 +298,7 @@
             font-weight: bold;
           }
           &:before {
-            content: '▼ ';
+            content: '\25BC';
             position: absolute;
             bottom: -25%;
             left: 40%;
@@ -364,7 +364,7 @@
                          }
                        }*/
           &:after {
-            content: '员工';
+            content: '\5458\5de5';
             position: absolute;
             bottom: -45%;
             left: 40%;
@@ -373,7 +373,7 @@
             font-weight: bold;
           }
           &:before {
-            content: '▼ ';
+            content: '\25BC';
             position: absolute;
             bottom: -25%;
             left: 45%;
