--- a/src/component/contact/photo.ejs
+++ b/src/component/contact/photo.ejs
@@ -63,6 +63,12 @@
                             <div class="back"><img src="images/shanghai_back.png"></div>
                         </div>
                     </div>
+                    <div class="container">
+                        <div class="flip">
+                            <div class="front"><img src="images/jinan_face.png"></div>
+                            <div class="back"><img src="images/jinan_back.png"></div>
+                        </div>
+                    </div>
                 </div>
 
                 <div class="mid_contents">
@@ -84,13 +90,19 @@
                             <div class="back"><img src="images/hangzhou_back.png"></div>
                         </div>
                     </div>
+                    <div class="container">
+                        <div class="flip">
+                            <div class="front"><img src="images/qingdao_face.png"></div>
+                            <div class="back"><img src="images/qingdao_back.png"></div>
+                        </div>
+                    </div>
                 </div>
 
             </div>
             <div class="second_contents">
-                <div class="container" style="height: 410px">
+        <!--        <div class="container" style="height: 410px">
                     <img src='images/city_one.png' style="height: 410px">
-                </div>
+                </div>-->
             </div>
             <div class="second_contents">
                 <div class="container" style="margin-bottom: 10px;">
